@startuml

title Architecture

legend right
    |= Color |= Meaning |
    |<back:LightBlue>                   | Manually optimized / Compiles |
    |<back:Grey>                   | Future |
    
endlegend 

class Main  { }

class DmxController {}
Main --> DmxController

class RtosTask <<abstract>> #LightBlue 
{
    +RtosTask()
    +~RtosTask(
    +init() : esp_err_t
    taskEntry()
    getTaskHandle()
    getEventQueue()
    isInitialized()
}

class DmxPresetChanger { }
class DmxPresets <<Data>> { }
DmxPresetChanger *-- DmxPresets
class DmxPreset <<Data>> {}
DmxPresets *--"2..20" DmxPreset
DmxController *-- DmxPresetChanger : Task
DmxPresets --> NvsStorage : segment \n 'DMX Presets'
DmxPresetChanger --|> RtosTask

class OscHandler #Grey {}
DmxController *-- OscHandler : Task

class Max3485Sender { }
DmxController *-- Max3485Sender : Task
Max3485Sender --> DmxPreset : Access

class ArtNetSender { }
DmxController *-- ArtNetSender : Task
ArtNetSender --> DmxPreset : Access   

class FootSwitch #LightBlue {}
DmxController *-- FootSwitch : Task
FootSwitch --> NvsStorage : Segment \n 'Foot Switch'
FootSwitch --|> RtosTask

class SevenSegmentDisplay #LightBlue {}
DmxController *--- SevenSegmentDisplay : Task
SevenSegmentDisplay --|> RtosTask

class WebServer {}
DmxController *-- WebServer : Task
WebServer --> FootSwitch : Access
WebServer --> DmxPresets : Access

@enduml

@startuml 
title Init
    
Main -> DmxController : DmxController()
Main -> DmxController : init()
DmxController -> WebServer : WebServer()
DmxController -> WebServer : init() 
DmxController -> SevenSegmentDisplay: SevenSegmentDisplay()
DmxController -> SevenSegmentDisplay : init()
DmxController -> OscSender : OscSender()
DmxController -> OscSender : init()
DmxController -> ArtNetSender : ArtnetSender()
DmxController -> ArtNetSender : init()
DmxController -> DmxPresetChanger : DmxPresetChanger() 
DmxController -> DmxPresetChanger : init()
DmxController -> FootSwitch : FootSwitch()
DmxController -> FootSwitch : init()
DmxController -> NvsStorage : NvsStorage()
DmxController -> NvsStorage : init()

DmxController -> NvsStorage : REQUEST_CONFIGURATION message
NvsStorage -> DmxController : CONFIGURATION_RESPONSE
DmxController -> FootSwitch : SET_CONFIGURATION message

DmxController -> NvsStorage : REQUEST_PRESETS message 
NvsStorage -> DmxController : PRESETS_RESPONSE
DmxController -> DmxPresetChanger : SET_PRESETS message




Main -> DmxController : taskLoop()

@enduml 

@startuml

title Message Queues Next/Prev Preset

FootSwitch --> DmxController : USER_NEXT_PRESET / USER_PREVIOUS_PRESET
DmxController --> DmxPresetChanger : SELECT_NEXT_PRESET / SELECT_PREVIOUS_PRESET    
DmxPresetChanger --> DmxController : USE_PRESET_DATA (preset index + data)
DmxController --> ArtNetSender : SEND_PRESET_DATA (preset data)
ArtNetSender --> DmxController : SEND_PRESET_DATA_RESPONSE (ok/nok)
DmxController --> SevenSegmentDisplay : SHOW_PRESET_INDEX (only index used)

@enduml

@startuml

title Webserver Update Config/Presets

WebServer --> DmxController : STORE_CONFIG
DmxController --> NvsStorage : STORE_CONFIG
NvsStorage --> DmxController : STORE_CONFIG_RESPONSE
DmxController --> FootSwitch : SET_CONFIGURATION (as Init)
DmxController --> NvsStorage : STORE_PRESETS
NvsStorage --> DmxController : STORE_PRESETS_RESPONSE
DmxController --> DmxController : Continue as in: USE_PRESET_DATA (preset index + data) 


@enduml



@startuml 
title OTA Update
FootSwitch --> DmxController : REQUEST_OTA
DmxController --> OTA : START_OTA 
OTA --> DmxController : OTA_FINISHED (ok/nok)
DmxController --> SevenSegmentDisplay : SHOW_OTA_RESULT
SevenSegmentDisplay --> DmxController : SHOW_OTA_RESULT_RESPONSE (ok) 
DmxController --> RTOS: Reset

@enduml 

@startuml 
title Foot Switch State Machine

[*] --> BOOT
BOOT --> OTA_CHECK : Current State == \n Pressed
BOOT --> NORMAL_OPERATION : Current State == \n Released
OTA_CHECK --> OTA : Long Press \ OTA Update
OTA_CHECK --> NORMAL_OPERATION : Short Press | Next Preset
OTA --> [*] : Reboot after OTA

NORMAL_OPERATION --> NORMAL_OPERATION: Short Press | Next Preset, \n Long Press | Previous Preset

@enduml 

@startuml 
title NVS Storage

class NvsStorage

class DmxPresets
{
    int NumberOfPresets
    int Preset_0_Universe_0[512]
    int Preset_0_Universe_1[512]
    ...
    int Preset_19_Universe_0[512]
    int Preset_19_Universe_1[512]
}


NvsStorage *-- DmxPresets : Segment \n 'DMX Presets'
class FootSwitch
{
    int LongPressMs
    bool Polarity
}

NvsStorage *-- FootSwitch : Segment \n 'Foot Switch'

@enduml

